resolved button coloring and aligning items

--- a/webserver/static/isptoolbox/src/sass/_overrides.sass
+++ b/webserver/static/isptoolbox/src/sass/_overrides.sass
@@ -15,7 +15,7 @@ p, a, h1, h2, h3, h4, h5, h6
 
 a
     text-decoration: none
-    color: $brand-secondary-color
+    color: $brand-primary-color
     font-weight: bold
     &:hover
         color: darken($brand-secondary-color, 7%)
